k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: nanovault-api-netpol, namespace: nanovault}
spec:
  podSelector: {matchLabels: {app: nanovault-api}}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {}
      ports: [{protocol: TCP, port: 8000}]
  egress:
    - to:
        - podSelector: {matchLabels: {app: nanovault-postgres}}
      ports: [{protocol: TCP, port: 5432}]
    - to: []
      ports: [{protocol: TCP, port: 443}]   # allow HTTPS egress (KMS, OIDC, etc.)
